--- a/appMover/package.json
+++ b/appMover/package.json
@@ -2,7 +2,7 @@
   "name": "qmcu-app-mover",
   "version": "1.0.0",
   "description": "This Qlik Sense QMC Utilities plugin will allow users to export apps out of a single environment and import them into 1 or more seperate Qlik Sense installs.",
-  "main": "index.js",
+  "main": "appmover.component.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/eapowertools/qmcu-app-mover#readme",
   "dependencies": {
-    "@qlik/leonardo-ui": "^0.12.0",
     "qrs-interact": "^2.0.3"
   }
 }
