--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,21 @@
+// See https://go.microsoft.com/fwlink/?LinkId=733558
+// for the documentation about the tasks.json format
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "deploy",
+    "command": "cmd",
+    "args": ["/C"],
     "isShellCommand": true,
-    "args": [],
-    "showOutput": "always"
+    "showOutput": "always",
+    "suppressTaskName": true,
+    "tasks": [
+        {
+            "taskName": "deploy",
+            "args": ["deploy"],
+            "isBuildCommand": true
+        },
+        {
+            "taskName": "copyNPMPackages",
+            "args": ["copyNPMPackages"]
+        }
+    ]
 }
