now deploying cross platform

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,7 +25,7 @@
         },
         {
             "taskName": "copyNPMPackages",
-            "args": ["copyNPMPackages"]
+            "args": ["./copyNPMPackages.bat"]
         }
     ]
 }
