--- a/appMover/package.json
+++ b/appMover/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/eapowertools/qmcu-app-mover#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "fs": "0.0.1-security",
